[tool.poetry]
name = "mobil-hw2"
version = "0.1.0"
description = ""
authors = ["Julia Isaacson <alisa.holmes@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc9"
allure-pytest = "2.13.5"
pytest = "8.3.2"
requests = "2.32.3"
Appium-Python-Client = "4.0.1"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--clean-alluredir --alluredir=allure-results"